--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,9 @@
 html
-	body
-		h1 #{title}
-		p THIS IS A TEST
+    body
+        script(src='//code.jquery.com/jquery-1.11.3.min.js')
+        script(src='/socket.io/socket.io.js')
+        script(src='/js/controller.js')
+
+
+        h1 #{title}
+        p THIS IS A TEST
