--- a/SummonAndroid/app/src/main/res/layout/activity_main.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,60 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_alignParentBottom="true"
+        android:weightSum="1.0"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id = "@+id/linearLayoutOne"
+            android:layout_height="0dp"
+            android:layout_weight=".5"
+            android:layout_width="fill_parent"
+            android:orientation="horizontal"
+            android:weightSum="1.0">
+            <Button
+                android:id="@+id/refillBtn"
+                android:text="Refill"
+                android:layout_weight=".5"
+                android:layout_width="0dp"
+                android:elevation="5dp"
+                android:layout_height="match_parent"
+                android:textSize="12sp" />
+            <Button
+                android:id="@+id/checkBtn"
+                android:text="Check"
+                android:elevation="5dp"
+                android:layout_weight=".5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="12sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id = "@+id/linearLayoutTwo"
+            android:layout_width="fill_parent"
+            android:orientation="horizontal"
+            android:layout_height="0dp"
+            android:layout_weight=".5"
+            android:layout_below="@id/linearLayoutOne"
+            android:weightSum="1.0">
+            <Button
+                android:id="@+id/orderBtn"
+                android:text="Order (SUPER BETA)"
+                android:layout_weight=".5"
+                android:elevation="5dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="12sp" />
+            <Button
+                android:id="@+id/customBtn"
+                android:text="Custom request"
+                android:layout_weight=".5"
+                android:elevation="5dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
