--- a/SummonAndroid/app/src/main/res/layout/dialog.xml
+++ b/SummonAndroid/app/src/main/res/layout/dialog.xml
@@ -8,6 +8,7 @@
         android:id = "@+id/requestInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
         android:hint="Request"/>
 
     <requestFocus/>
