--- a/SummonAndroid/app/src/main/res/layout/activity_main.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+
+
     <LinearLayout
+        android:id = "@+id/linearParent"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_alignParentBottom="true"
@@ -60,4 +63,13 @@
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id = "@+id/welcomeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/linearParent"
+        android:layout_marginBottom="20dp"
+        />
 </RelativeLayout>
