--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,9 +11,10 @@ h1{
     font-size: 60px;
 }
 ul{
-    margin-top: 30
+    margin-top: 30;
+    text-align: center;
 }
-li{
+li, ul{
     list-style-type: none;
     text-align: center;
     font-family: 'Lato', sans-serif;
