--- a/SummonAndroid/app/src/main/res/values/styles.xml
+++ b/SummonAndroid/app/src/main/res/values/styles.xml
@@ -5,4 +5,17 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="MyCustomTheme" parent="@android:style/Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/MyActionBarTheme</item>
+    </style>
+
+    <style name="MyActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">@color/toastOrange</item>
+        <item name = "android:titleTextStyle">@style/textStyle</item>
+        <item name="android:icon">@android:color/transparent</item>
+    </style>
+
+    <style name="textStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 </resources>
