--- a/SummonAndroid/app/src/main/res/layout/activity_zxing_splash.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_zxing_splash.xml
@@ -6,12 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.vishalkuo.summon.ZXIngSplash">
 
+    <TextView
+        android:id = "@+id/genie"
+        android:text="Genie"
+        android:textSize="70dp"
+        android:textStyle="bold|italic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:textColor="@color/toastOrange"/>
+
     <Button
         android:id = "@+id/scanBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text = "Scan QR Code"
-        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="nah (beta)"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/scanBtn"/>
 
 </RelativeLayout>
