pres ctrl s to save

--- a/SummonAndroid/app/src/main/res/layout/activity_customer_order.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_customer_order.xml
@@ -14,4 +14,11 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"/>
 
+    <ProgressBar
+        style="@android:style/Widget.Material.ProgressBar.Large"
+        android:layout_centerInParent="true"
+        android:id = "@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
