--- a/SummonAndroid/app/src/main/res/layout/activity_zxing_splash.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_zxing_splash.xml
@@ -25,6 +25,7 @@
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"/>
     <Button
+        android:id = "@+id/nahBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="nah (beta)"
