--- a/SummonAndroid/app/src/main/res/layout/activity_customer_order.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_customer_order.xml
@@ -15,8 +15,9 @@
         android:paddingRight="16dp"/>
 
     <ProgressBar
-        style="@android:style/Widget.Material.ProgressBar.Large"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_centerInParent="true"
+        android:visibility="gone"
         android:id = "@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
