--- a/SummonAndroid/app/src/main/res/layout/activity_zxing_splash.xml
+++ b/SummonAndroid/app/src/main/res/layout/activity_zxing_splash.xml
@@ -1,6 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,20 +19,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:textColor="@color/toastOrange"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+        <at.markushi.ui.CircleButton
+            android:id = "@+id/scanBtn"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:cb_color="@color/toastOrange"
+            app:cb_pressedRingWidth="8dip"
+            android:src="@drawable/qr"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"/>
 
-    <Button
-        android:id = "@+id/scanBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text = "Scan QR Code"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"/>
-    <Button
-        android:id = "@+id/nahBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="nah (beta)"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/scanBtn"/>
+        <at.markushi.ui.CircleButton
+            android:id = "@+id/nahBtn"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:cb_color="@color/toastOrange"
+            android:src = "@drawable/na"
+            app:cb_pressedRingWidth="8dip"
+            android:layout_centerVertical = "true"
+            android:layout_toRightOf = "@id/scanBtn"/>
+    </LinearLayout>
+
+
 
 </RelativeLayout>
